spacing fixes for teaching summary schedule

--- a/myuw/static/css/course_card.less
+++ b/myuw/static/css/course_card.less
@@ -95,7 +95,7 @@ c8a #473EC5;
 .table-course-schedule {
     border: 0;
 
-    th.meeting-dates { 
+    th.meeting-dates {
         padding: 0 16px 8px 0;
         font-weight: normal;
     }
@@ -137,7 +137,7 @@ c8a #473EC5;
         }
         &.course-loc-tbd {  }
         &.course-enrollment {
-            width: 6em;
+        //    width: 6em;
             text-align: right;
 
             .course_class_list {
@@ -171,6 +171,8 @@ c8a #473EC5;
 
     th.meeting-dates {
         font-weight: normal;
+        font-style: italic;
+        padding-bottom: 0;
     }
     td {
         &.course-days { width: 4.5em; }
